# agora

./: .gitignore  README.md  pyproject.toml
config/: settings.example.toml
orchestrator/: __init__.py  config.py  drafting.py  main.py  models.py  ollama_client.py  pipeline.py  product_profile.py  relevance.py  storage.py  telegram_bot.py
orchestrator/providers/: __init__.py  base.py  factory.py  reddit.py
products/default/: notes.md  profile.toml
